<resources>
    <string name="app_name">googleproject</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="aboutus1">Welcome to the Wildtech Resort Application Your Gateway to Adventure</string>
    <string name="aboutus2">At WildTech Resort, we believe in the perfect blend of technology and nature to deliver an unparalleled experience for our guests. Nestled in the heart of Urdaneta City, we are more than just a resort; we are your escape into the wild, offering a seamless integration of cutting-edge technology and the pristine beauty of our surroundings.</string>
    <string name="aboutus3">At WildTech Resort, our mission is to create unforgettable moments for our guests by seamlessly blending modern conveniences with the awe-inspiring beauty of the great outdoors. We are committed to providing an eco-friendly, sustainable, and technologically advanced resort experience that leaves a minimal impact on the environment.</string>
    <string name="terms1">Welcome to the WildTech Resort Application, Before you begin using our application, please read the following terms and conditions carefully. By accessing or using the WildTech Resort you agree to be bound by these terms and conditions. If you do not agree with any part of these terms, please do not use our application.</string>
    <string name="term2">By downloading, installing, or using the WilTech Resort Application, you agree to comply with and be bound by these Terms and Conditions.</string>
    <string name="term3">a. You must be at least 18 years old to use this App. If you are under 18, you may use the App only with the involvement of a parent or guardian. \n \n b. You agree to use the App for lawful purposes and in accordance with these Terms and Conditions.</string>
    <string name="term4">a. To use certain features of the App, you may be required to create an account. You are responsible for maintaining the confidentiality of your account information and for all activities that occur under your account. \n \n b. You agree to provide accurate and complete information when creating your account and to update your information promptly if there are any changes.</string>
    <string name="term5">a. The App may provide a reservation feature. By making a reservation through the App, you agree to the resort\'s reservation and cancellation policies. \n \n b. Payment for reservations made through the App is subject to the resort\'s payment policies.</string>
    <string name="term6">a. You may have the opportunity to submit content, such as reviews or photos, through the App. By submitting content, you grant WildTech a non-exclusive, royalty-free, worldwide, perpetual, and irrevocable license to use, reproduce, modify, adapt, publish, translate, distribute, and display such content. \n \n b. You represent and warrant that you have the right to submit the content and that it does not violate the rights of any third party.</string>
    <string name="term7">Your use of the App is also governed by our Privacy Policy, which can be found https//www.WildTechPolicy.com</string>
    <string name="term8">a. The App and its content are owned by [Your Resort\'s Name] and are protected by intellectual property laws. \n \n b. You may not reproduce, distribute, modify, or otherwise use the content of the App without the express written consent of WildTech Resort.</string>
    <string name="term9">WildTech Resort is not liable for any direct, indirect, incidental, special, or consequential damages arising out of or in any way connected with the use of the App.</string>
    <string name="term10">WildTech Resort reserves the right to terminate or suspend your account and access to the App at any time without prior notice for any reason.</string>
    <string name="term11">WildTech Resort reserves the right to modify or update these Terms and Conditions at any time. It is your responsibility to review these terms periodically. By using the WildTech Resort Application, you acknowledge that you have read, understood, and agree to be bound by these Terms and Conditions. If you do not agree with any part of these terms, you should not use the App.</string>
    <string name="ans1">During the booking process, you\'ll typically need to provide your name, contact details, payment information, and any special requests. Ensure that the information is accurate to facilitate a smooth booking experience.</string>
    <string name="ans2">Yes, you can modify or cancel your reservation through the app. Visit the My Reservations section, select your booking, and follow the provided options. Be aware of our cancellation and modification policies.</string>
    <string name="ans3">We accept Card, Credit Cards and Mobile Payment like Gcash, Paymaya. Make sure your preferred payment method is linked to your account for a hassle-free booking experience.</string>
    <string name="ans4">Navigate to the My Bookings or Booking History section within the app to view and manage your past and upcoming reservations.</string>
    <string name="ans5">Absolutely. We prioritize the security of your personal and payment information. Our app employs industry-standard encryption protocols to safeguard your data. Refer to our Privacy Policy [provide a link] for more details.</string>
    <string name="ans6">If you experience technical issues, try restarting the app or updating to the latest version. If the problem persists, contact our support team at [support@email.com] or through the Contact Us feature in the app.</string>
    <string name="ans7">Yes, our app often provides exclusive loyalty programs and discounts. Check the Promotions or Special Offers section within the app to stay informed about the latest deals.</string>
    <string name="ans8">Your feedback is valuable to us! Use the Feedback or Contact Us feature in the app to share your thoughts. Alternatively, you can email our support team at [support@email.com]. \n \n If you have additional questions, feel free to reach out to our support team. We\'re here to assist you!</string>
    <string name="policy1">Welcome to theWildTEch Resort Application. This Privacy Policy outlines how we collect, use, disclose, and safeguard your personal information. By using the App, you agree to the terms outlined in this policy.</string>
    <string name="policy2">a. <b>Personal Information:</b> When you create an account or make a reservation, we may collect personal information, including but not limited to your name, contact details, payment information, and any preferences you provide. \n \n b. <b>Device Information:</b> We may collect information about the device you use to access the App, including the device type, operating system, and unique device identifiers. c. Location Information: With your consent, we may collect information about your location to provide location-based services, such as finding nearby resorts.</string>
    <string name="policy3">a. <b>Reservation and Account Management:</b> We use your information to process reservations, manage your account, and provide personalized services. \n \n b. <b>Communication:</b> We may use your contact information to send you reservation confirmations, updates, and promotional offers. You can opt-out of promotional communications at any time. \n \n c. <b>Improvement of Services: </b>We analyze user behavior to improve our services, enhance user experience, and troubleshoot issues. \\</string>
    <string name="policy4">a. <b>Third-Party Service Providers:</b> We may share your information with third-party service providers to facilitate reservations, process payments, and perform other services on our behalf. \n \n b. <b>Legal Compliance: </b>We may disclose your information when required by law or to protect our rights and comply with legal obligations.</string>
    <string name="policy5">We employ industry-standard security measures to protect your personal information from unauthorized access, disclosure, alteration, and destruction.\\</string>
    <string name="policy6">a. <b>Access and Correction:</b> You can access and update your account information through the App. \n \n b. <b>Location Services:</b> You can enable or disable location services through your device settings or within the App.</string>
    <string name="policy7">The App is not intended for individuals under the age of 18. We do not knowingly collect personal information from children. If you believe we have unintentionally collected information from a child, please contact us to delete it</string>
    <string name="policy8">We may update this Privacy Policy periodically. The date of the last update will be indicated at the top of the policy.</string>
    <string name="policy9">If you have any questions or concerns about this Privacy Policy or our data practices, please contact us at contactWildTechSupport@email.com.’</string>
</resources>