<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Terms_And_Condtion_text"
    android:background="@color/frameback"
    >

    <ImageView
        android:id="@+id/backb"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/d_dinbold"
        android:text="Terms And Condition"
        android:textSize="30dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Last Updated: November 22, 2023"
                android:textSize="15dp"
                android:fontFamily="@font/d_dinbold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms1"
                android:textSize="11dp"
                android:fontFamily="@font/d_din"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1. Acceptance of Terms"
                android:textSize="15dp"
                android:fontFamily="@font/d_dinbold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term2"
                android:textSize="11dp"
                android:fontFamily="@font/d_din"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2. Use the App"
                android:textSize="15dp"
                android:fontFamily="@font/d_dinbold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term3"
                android:textSize="11dp"
                android:fontFamily="@font/d_din"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3. Account Registration"
                android:textSize="15dp"
                android:fontFamily="@font/d_dinbold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term4"
                android:textSize="11dp"
                android:fontFamily="@font/d_din"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4. Reservation"
                android:textSize="15dp"
                android:fontFamily="@font/d_dinbold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term5"
                android:textSize="11dp"
                android:fontFamily="@font/d_din"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5. User Content"
                android:textSize="15dp"
                android:fontFamily="@font/d_dinbold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term6"
                android:textSize="11dp"
                android:fontFamily="@font/d_din"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="6. Privacy Policy"
                android:textSize="15dp"
                android:fontFamily="@font/d_dinbold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term7"
                android:textSize="11dp"
                android:fontFamily="@font/d_din"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="7. Intellectual Property"
                android:textSize="15dp"
                android:fontFamily="@font/d_dinbold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term8"
                android:textSize="11dp"
                android:fontFamily="@font/d_din"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8. Limitation of Liability"
                android:textSize="15dp"
                android:fontFamily="@font/d_dinbold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term9"
                android:textSize="11dp"
                android:fontFamily="@font/d_din"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="9. Termination"
                android:textSize="15dp"
                android:fontFamily="@font/d_dinbold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term10"
                android:textSize="11dp"
                android:fontFamily="@font/d_din"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10. Change to Terms and Condition"
                android:textSize="15dp"
                android:fontFamily="@font/d_dinbold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term11"
                android:textSize="11dp"
                android:fontFamily="@font/d_din"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                />





        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>